--- a/jbake.properties
+++ b/jbake.properties
@@ -7,4 +7,5 @@ template.tag.file=tags.thyme
 template.sitemap.file=sitemap.thyme
 template.post.file=post.thyme
 template.page.file=page.thyme
+template.category.file=category.thyme
 template.feed.file=feed.thyme
